<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
<resources>
    <string name="app_name">FlightIntel</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="browse">Browse</string>
    <string name="nearby">Nearby</string>
    <string name="airport_details">Airport Details</string>
    <string name="nearby_airports">Nearby Airports</string>
    <string name="nearby_wx">Nearby Weather</string>
    <string name="browse_airports">Browse Airports</string>
    <string name="fss_outlets">Nearby FSS Outlets</string>
    <string name="search_hint">Search airports</string>
    <string name="download_installed">Currently installed</string>
    <string name="download_available">Available for download</string>
    <string name="download_noinstall">No installed data</string>
    <string name="download_noupdate">None available</string>
    <string name="download_all">Download All</string>
    <string name="delete_all">Delete All</string>
    <string name="download_expired">Expired</string>
    <string name="download_error">Unable to contact update server</string>
    <string name="downloading">Downloading\u2026</string>
    <string name="installing">Installing\u2026</string>
    <string name="install_done">Finished</string>
    <string name="please_wait">Please wait\u2026</string>
    <string name="view_details">View details</string>
    <string name="delete">Delete</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="waiting_location">Waiting for location\u2026</string>
    <string name="communications">Communications</string>
    <string name="airport_communications">Airport Communications</string>
    <string name="airport_services">Airport Services</string>
    <string name="other_services">Other Services</string>
    <string name="weather_stations">Weather Stations</string>
    <string name="airport_owner">Ownership and Contact</string>
    <string name="airport_manager">Airport Manager</string>
    <string name="remarks">Remarks</string>
    <string name="airport_remarks">Airport Remarks</string>
    <string name="nearby_facilities">Nearby Facilities</string>
    <string name="home_airport">Home Airport</string>
    <string name="airport_attendance">Airport Attendance</string>
    <string name="atc_communications">ATC Communications</string>
    <string name="atc_phones">ATC Phone Numbers</string>
    <string name="sunrise_sunset">Sunrise and Sunset</string>
    <string name="runways">Runways</string>
    <string name="helipads">Helipads</string>
    <string name="nearby_navaids">Nearby Navaids</string>
    <string name="navaid_details">Navaid Details</string>
    <string name="navaid_notams">Navaid NOTAMs</string>
    <string name="airport_notams">Airport NOTAMs</string>
    <string name="ils_details">ILS Details</string>
    <string name="vor">Directional Navaids</string>
    <string name="ndb">Non-directional Navaids</string>
    <string name="localizer">Localizer</string>
    <string name="glideslope">Glideslope</string>
    <string name="innermarker">Inner Marker</string>
    <string name="middlemarker">Middle Marker</string>
    <string name="outermarker">Outer Marker</string>
    <string name="faa_services">FAA Services</string>
    <string name="fss_services">FSS Services</string>
    <string name="airport_operations">Airport Operations</string>
    <string name="donation_levels">Choose Donation</string>
    <string name="past_donations">Past Donations</string>
    <string name="agree">I Agree</string>
    <string name="disagree">I Disagree</string>
    <string name="other_details">Other Details</string>
    <string name="raw_text">Raw Text</string>
    <string name="phone">Phone</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="rate_it">Rate It</string>
    <string name="refresh">Refresh</string>
    <string name="charts">Charts</string>
    <string name="library">Library</string>
    <string name="scratch_pad">Scratch Pad</string>
    <string name="sky_condition">Sky Condition</string>
    <string name="winds">Winds</string>
    <string name="visibility">Visibility</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="instrument_procedures">Instrument Procedures</string>
    <string name="aeronav_products">AeroNav Digital Products</string>
    <string name="based_aircraft">Based Aircraft</string>
    <string name="annual_ops">Annual Operations</string>
    <string name="aircraft_operations">Aircraft Operations</string>
    <string name="metar_graphics">METAR Graphics</string>
    <string name="taf_graphics">TAF Graphics</string>
    <string name="pirep_graphics">Pirep Graphics</string>
    <string name="airsigmet_graphics">AirSigmet Graphics</string>
    <string name="select_prog_chart">Select Prognosis Chart</string>
    <string name="select_radar_image">Select Radar Image</string>
    <string name="sd_card_monitor">SD Card Monitor</string>
    <string name="try_now">Try Now</string>
    <string name="view_graphic">View Graphic</string>
    <string name="charts_download">Charts Download</string>
    <string name="tfr_list">TFR List</string>
    <string name="notam_tfr">NOTAM &amp; TFR</string>
    <string name="tfr_text">TFR Text</string>
    <string name="tfr_details">TFR Details</string>
    <string name="tfr_time">TFR Time</string>
    <string name="tfrs">TFRs</string>
    <string name="select_charts_volume">Select Charts Volume</string>
    <string name="select_type">Select Type</string>
    <string name="ceiling">Ceiling</string>
    <string name="flight_category">Flight Category</string>
    <string name="utc_time">UTC Time</string>
    <string name="home_time">Home Time</string>
    <string name="local_time">Local Time</string>
    <string name="clocks">Clocks</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="leg">Leg</string>
    <string name="colon">:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="question">\?</string>
    <string name="e6b">E6B Computer</string>
    <string name="rwy">RWY</string>
    <string name="var">VAR</string>
    <string name="hwnd">HWND</string>
    <string name="xwnd">XWND</string>
    <string name="gs">GS</string>
    <string name="hdg">HDG</string>
    <string name="crs">CRS</string>
    <string name="ws">WS</string>
    <string name="wdir">WDIR</string>
    <string name="altitude">Altitude</string>
    <string name="input_degC">\? \u00B0C</string>
    <string name="input_ft">\? ft</string>
    <string name="input_inHg">\? inHg</string>
    <string name="input_kts">\? kts</string>
    <string name="input_deg">\? \u00B0</string>
    <string name="input_deg_true">\? \u00B0T</string>
    <string name="input_min">\? min</string>
    <string name="input_nm">\? nm</string>
    <string name="input_gal">\? Gal</string>
    <string name="input_gph">\? Gal/h</string>
    <string name="input_lbs">\? lbs</string>
    <string name="input_lbsph">\? lbs/h</string>
    <string name="input_ftpnm">\? ft/nm</string>
    <string name="input_ftpmin">\? ft/min</string>
    <string name="ft">ft</string>
    <string name="degC">\u00B0C</string>
    <string name="degF">\u00B0F</string>
    <string name="deg">\u00B0</string>
    <string name="inHg">inHg</string>
    <string name="mbar">mBar</string>
    <string name="kts">kts</string>
    <string name="nm">nm</string>
    <string name="min">min</string>
    <string name="gal">Gal</string>
    <string name="gph">Gal/h</string>
    <string name="lbs">lbs</string>
    <string name="lbsph">lbsph</string>
    <string name="ftpmin">ft/min</string>
    <string name="pct">%</string>
    <string name="altimeter">Altimeter</string>
    <string name="elevation">Elevation</string>
    <string name="pa">Pressure Altitude</string>
    <string name="da">Density Altitude</string>
    <string name="ta">True Altitude</string>
    <string name="ias">IAS</string>
    <string name="tas">TAS</string>
    <string name="iat">IAT</string>
    <string name="oat">OAT</string>
    <string name="ia">Indicated Altitude</string>
    <string name="mach">Mach Number</string>
    <string name="recovery_factor">Recovery Factor</string>
    <string name="time_flown">Time Flown</string>
    <string name="distance_flown">Distance Flown</string>
    <string name="ground_speed">Ground Speed</string>
    <string name="station_altitude">Station Altitude</string>
    <string name="total_fuel">Total Fuel</string>
    <string name="total_weight">Total Weight</string>
    <string name="burn_rate">Burn Rate</string>
    <string name="endurance">Endurance</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="climb_grad">Climb Gradient</string>
    <string name="climb_rate">Climb Rate</string>
    <string name="initial_alt">Initial Altitude</string>
    <string name="crossing_alt">Crossing Altitude</string>
    <string name="fix_dist">Distance to Fix</string>
    <string name="descent_rate">Descent Rate</string>
    <string name="desired_alt">Desired Altitude</string>
    <string name="distance">Distance</string>
    <string name="range">Range</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="afd">A/FD</string>
    <string name="airports">Airports</string>
    <plurals name="airports_found">
        <item quantity="zero">No airports found</item>
        <item quantity="one">1 airport found</item>
        <item quantity="other">%1$d airports found</item>
    </plurals>
    <plurals name="notams_found">
        <item quantity="zero">No active NOTAMs found</item>
        <item quantity="one">1 active NOTAM found</item>
        <item quantity="other">%1$d active NOTAMs found</item>
    </plurals>
    <plurals name="search_entry_found">
        <item quantity="zero">No airports matching \'%2$s\'</item>
        <item quantity="one">1 airport matching \'%2$s\'</item>
        <item quantity="other">%1$d airports matching \'%2$s\'</item>
    </plurals>
</resources>
