<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_favorites" 
          android:title="@string/favorites"
          android:icon="@drawable/ic_menu_star" />
    <item android:id="@+id/menu_browse" 
          android:title="@string/browse"
          android:icon="@drawable/ic_menu_browse" />
    <item android:id="@+id/menu_nearby" 
          android:title="@string/nearby"
          android:icon="@android:drawable/ic_menu_mylocation" />
    <item android:id="@+id/menu_download"
          android:title="@string/downloads" 
          android:icon="@android:drawable/ic_menu_save" />
    <item android:id="@+id/menu_settings" 
          android:title="@string/settings"
          android:icon="@android:drawable/ic_menu_preferences" />
    <item android:id="@+id/menu_donate"
          android:title="@string/donate" />
    <item android:id="@+id/menu_about"
          android:title="@string/about"
          android:icon="@android:drawable/ic_menu_info_details" />
    <item android:id="@+id/menu_refresh"
          android:title="@string/refresh"
          android:showAsAction="always"
          android:visible="false"
          android:icon="@drawable/ic_action_refresh" />
    <item android:id="@+id/menu_search"
          android:title="@string/search"
          android:showAsAction="collapseActionView|always" 
          android:icon="@drawable/ic_action_search" />
</menu>
