<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011-2013 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView android:id="@+id/e6b_label"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="left"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TableLayout
                android:background="@drawable/rounded_rectangle"
                android:stretchColumns="0,1"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/ias"
                        android:textSize="18sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:text="@string/tas"
                        android:textSize="18sp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            <TableRow
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_ias"
                        android:inputType="number"
                        android:hint="@string/input_kts"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <EditText android:id="@+id/e6b_edit_tas"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:textColor="#007040"
                        android:hint="@string/kts"
                        android:focusable="false"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/altitude"
                        android:textSize="18sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_ia"
                        android:inputType="numberDecimal"
                        android:hint="@string/input_degC"
                        android:layout_marginTop="-8dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/altimeter"
                        android:textSize="18sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_altimeter"
                        android:inputType="numberDecimal"
                        android:hint="@string/input_inHg"
                        android:layout_marginTop="-6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/temperature"
                        android:textSize="18sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText android:id="@+id/e6b_edit_temperature_c"
                        android:inputType="numberDecimal"
                        android:hint="@string/input_degC"
                        android:layout_marginTop="-8dp"
                        android:layout_marginLeft="6dp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
        <TextView android:id="@+id/e6b_msg"
                android:textIsSelectable="false"
                android:gravity="center"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
