<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView android:id="@+id/rwy_ils_label"
            style="@style/TextSmall.Bold"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_ils_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/rwy_loc_label"
            style="@style/TextSmall.Bold"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/localizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_loc_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/rwy_gs_label"
            style="@style/TextSmall.Bold"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/glideslope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_gs_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/rwy_im_label"
            style="@style/TextSmall.Bold"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/innermarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_im_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/rwy_mm_label"
            style="@style/TextSmall.Bold"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/middlemarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_mm_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/rwy_om_label"
            style="@style/TextSmall.Bold"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:text="@string/outermarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_om_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/rwy_ils_remarks"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="8dp"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>
