<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * FlightIntel for Pilots
 *
 * Copyright 2011-2013 Nadeem Hasan <nhasan@nadmm.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 */
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/comm_detail_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView android:id="@+id/airport_comm_label"
            style="@style/TextLabel"
            android:text="@string/airport_communications"
            android:layout_marginTop="@dimen/section_margin"
            android:padding="@dimen/label_padding"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/airport_comm_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/atc_comm_label"
            style="@style/TextLabel"
            android:text="@string/atc_communications"
            android:layout_marginTop="@dimen/section_margin"
            android:padding="@dimen/label_padding"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/atc_comm_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/atc_phones_label"
            style="@style/TextLabel"
            android:text="@string/atc_phones"
            android:layout_marginTop="@dimen/section_margin"
            android:padding="@dimen/label_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/atc_phones_details"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView android:id="@+id/airport_comm_remarks"
            style="@style/TextLabel"
            android:text="@string/remarks"
            android:padding="@dimen/label_padding"
            android:layout_marginTop="@dimen/section_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout android:id="@+id/comm_remarks_layout"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:padding="@dimen/item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>
